# tradingdmp

./: .gitignore  .gitlab-ci.yml  .mypy.ini  LICENSE  Makefile  README.md  gitlab-ci.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 20210124_check-interim_data.ipynb  20210124_check-prep_data.ipynb  20210315_fit-model_alpaca-poc-data.ipynb  20210410_fit-model_alpaca-poc-data.ipynb  20210521_fit-model_alpaca-poc-data.ipynb  20210711_fit-model_alpaca-poc-data.ipynb  20210718_fit-model_alpaca-poc-data.ipynb  to_max.ipynb
src/: __init__.py
src/data/: __init__.py  app_data.py  base_data.py  feat_data.py  prep_data.py  raw_data.py
src/models/: __init__.py  base_model.py
src/policy/: __init__.py  base_policy.py
src/tradingdmp/data/: app_data.py  base_data.py  prep_data.py  raw_data.py
src/tradingdmp/data/clf/: __init__.py  base_data.py
src/tradingdmp/data/clf/price_perc_chg/: __init__.py  app_data.py
src/tradingdmp/data/reg/: __init__.py  app_data.py  base_data.py
src/tradingdmp/data/reg/price_perc_chg/: __init__.py
src/tradingdmp/data/utils/: __init__.py  prep_data.py  raw_data.py
src/tradingdmp/model/: __init__.py
src/tradingdmp/model/clf/: __init__.py  app_model.py  base_model.py
src/tradingdmp/model/clf/price_perc_chg/: __init__.py
src/tradingdmp/model/reg/: __init__.py  base_model.py
src/tradingdmp/model/reg/price_perc_chg/: __init__.py
src/tradingdmp/policy/: __init__.py
src/tradingdmp/policy/clf/: __init__.py  base_policy.py
src/tradingdmp/policy/reg/: __init__.py  base_policy.py
src/utils/: __init__.py  utils.py
tests/: async_example.py  main.py
(+4 files in other folders)
