[tool.poetry]
name = "tradingapp"
version = "0.1.0"
description = ""
authors = ["Julius Kittler"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0"
numpy = "^v1.19"
pymongo = "^3.11" 
requests = "*"
pytz = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^20.8b1"
pydocstyle = "^5.1.1"
mypy = "^0.790"
pylint = "^2.6.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
