[tool.poetry]
name = "tradingapp"
version = "0.1.0"
description = ""
authors = ["Julius Kittler", "August Andersen"]

[tool.poetry.dependencies]
python = "3.8.x"
pandas = "^1.0"
numpy = "^v1.19"
pymongo = "^3.11" 
requests = "*"
pytz = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^20.8b1"
flake8 = "^3.8.4"
pep8-naming = "^0.11.1"
mypy = "^0.790"
pydocstyle = "^5.1.1"
darglint = "^1.5.8"
pymongo = "*"
mljar-supervised = "^0.9.1"
jupyter = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
