[tool.poetry]
name = "tradingdmp"
version = "0.6.1"
description = ""
authors = ["Julius Kittler", "August Andersen"]

[tool.poetry.dependencies]
python = "3.8.x"
pandas = "^1.0"
numpy = "^v1.19"
pymongo = "^3.11" 
requests = "^2.25.1"
pytz = "^2021.1"
mljar-supervised = "^0.10.3"
mlflow = "^1.17.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pep8-naming = "^0.11.1"
mypy = "^0.790"
pydocstyle = "^5.1.1"
darglint = "^1.5.8"
pymongo = "^3.11" 
jupyterlab = "^3.0.12"
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
